--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -24,16 +24,6 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Location service needed.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Location service needed.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location service needed.</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>location</string>
-	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -44,6 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -57,5 +48,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This will let you allow to Campigns on your location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This will let you allow to Campigns on your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This will let you allow to Campigns on your location</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
